# lancalc

./: .flake8  .gitignore  .pre-commit-config.yaml  EXAMPLES.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.py  test_lancalc.py  test_optimizations.py
.github/: FUNDING.yml
.github/workflows/: ci.yml  main.yml  publish.yml
docs/: CHANGELOG.md  RFC.md
lancalc/: __init__.py  __main__.py  adapters.py  cli.py  core.py  gui.py  main.py
