[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lancalc"
dynamic = ["version"]
description = "A desktop application for calculating network configurations"
readme = { file = "README.md", content-type = "text/markdown" }
license = { file = "LICENSE" }
authors = [{ name = "Aleksandr Pimenov", email = "wachawo@gmail.com" }]
maintainers = [{ name = "Aleksandr Pimenov", email = "wachawo@gmail.com" }]
keywords = ["network", "calculator", "subnet", "ip", "address"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Information Technology",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
    "License :: OSI Approved :: MIT License",
    "Topic :: System :: Networking",
    "Topic :: Utilities",
]
requires-python = ">=3.9"
dependencies = [
    "netifaces>=0.11.0; platform_system == 'Linux'",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "pytest-qt>=4.0.0", "pre-commit", "flake8"]
gui = ["PyQt5>=5.15"]
dist = ["PyInstaller>=6.0.0"]  # бывший build

[project.scripts]
lancalc = "lancalc.main:main"

[project.urls]
Homepage = "https://github.com/lancalc/lancalc"
Repository = "https://github.com/lancalc/lancalc"
Documentation = "https://github.com/lancalc/lancalc#readme"
"Bug Reports" = "https://github.com/lancalc/lancalc/issues"

[tool.setuptools.dynamic]
version = { attr = "lancalc.__version__" }

[tool.setuptools.packages.find]
include = ["lancalc*"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
lancalc = ["**/*.png", "**/*.ico", "**/*.icns", "**/*.ui", "resources/**"]

[tool.pytest.ini_options]
testpaths = ["test_lancalc.py"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
qt_api = "pyqt5"
